# mlops-titanic

./: .gitignore  Makefile  README.md  pyproject.toml
conf/: config.yaml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: exp.ipynb
tsp/: __init__.py  dataset.py  features.py  main.py  plots.py
tsp/config/: config.py  logger.py
tsp/modeling/: predict.py  train.py
tsp/utils/: data_setup.py
